@@ -15,7 +15,6 @@ use NetworkInternational\NGenius\Gateway\Config\Config;
 
 class OrderCancelAfter implements ObserverInterface
 {
-
     /**
      * @var Config
      */
