@@ -2,7 +2,7 @@
   "name": "networkinternational/ngenius",
   "description": "Network International N-Genius Payment Gateway for Magento 2",
   "type": "magento2-module",
-  "version": "1.1.2",
+  "version": "1.1.3",
   "minimum-stability": "stable",
   "license": "GPL-3.0",
   "authors": [{
@@ -11,7 +11,7 @@
   }],
   "require": {
     "php": "^8.1",
-    "ngenius/ngenius-common": "1.0.2"
+    "ngenius/ngenius-common": "v1.0.6"
   },
   "autoload": {
     "files": [
