@@ -126,6 +126,11 @@
                     <source_model>Magento\Config\Model\Config\Source\Yesno</source_model>
                     <config_path>payment/ngeniusonline/debug</config_path>
                 </field>
+                <field id="debug_cron" translate="label" type="select" sortOrder="15" showInDefault="1" showInWebsite="1" showInStore="0">
+                    <label>Debug Cron</label>
+                    <source_model>Magento\Config\Model\Config\Source\Yesno</source_model>
+                    <config_path>payment/ngeniusonline/debug_cron</config_path>
+                </field>
             </group>
         </section>
     </system>
